@@ -499,8 +499,8 @@ public class GrailsDomainBinder implements MetadataContributor {
             }
         } else {
             if (hasJoinKeyMapping(propConfig)) {
-                java.util.List<ColumnConfig> keys = propConfig.getJoinTable().getKeys();
-                bindSimpleValue("long", key, false, keys.get(0).getName(), mappings);
+                var keys = propConfig.getJoinTable().getKeys();
+                bindSimpleValue("long", key, false, keys.getFirst().getName(), mappings);
             } else {
                 bindDependentKeyValue(property, key, mappings, sessionFactoryBeanName);
             }
@@ -2393,7 +2393,7 @@ public class GrailsDomainBinder implements MetadataContributor {
                     final ColumnConfig columnConfig = new ColumnConfig();
                     columnConfig.setName(namingStrategy.propertyToColumnName(property.getName()) +
                             UNDERSCORE + FOREIGN_KEY_SUFFIX);
-                    java.util.List<ColumnConfig> keys = new java.util.ArrayList<>();
+                    var keys = new ArrayList<ColumnConfig>();
                     keys.add(columnConfig);
                     jt.setKeys(keys);
                     pc.setJoinTable(jt);
@@ -3146,7 +3146,7 @@ public class GrailsDomainBinder implements MetadataContributor {
                 PropertyConfig c = m.getPropertyConfig(grailsProp.getName());
 
                 if (supportsJoinColumnMapping(grailsProp) && hasJoinKeyMapping(c)) {
-                    columnName = c.getJoinTable().getKeys().get(0).getName();
+                    columnName = c.getJoinTable().getKeys().getFirst().getName();
                 }
                 else if (c != null && c.getColumn() != null) {
                     columnName = c.getColumn();
@@ -3157,7 +3157,7 @@ public class GrailsDomainBinder implements MetadataContributor {
             if (supportsJoinColumnMapping(grailsProp)) {
                 PropertyConfig pc = getPropertyConfig(grailsProp);
                 if (hasJoinKeyMapping(pc)) {
-                    columnName = pc.getJoinTable().getKeys().get(0).getName();
+                    columnName = pc.getJoinTable().getKeys().getFirst().getName();
                 }
                 else {
                     columnName = cc.getName();
